--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello React</title>
+    <link rel="stylesheet" href="node_modules/basscss/css/basscss.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.css" type="text/css" />
   </head>
   <body>
-    <div id="hello"></div>
-    <div id="world"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
