--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello React</title>
-    <link rel="stylesheet" href="node_modules/basscss/css/basscss.css" type="text/css" />
+    <title>CSS dot Cool</title>
+    <link rel="stylesheet" href="css/basscss.css" type="text/css" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
   </head>
   <body>
