--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <title>CSS dot Cool</title>
     <link rel="stylesheet" href="css/basscss.css" type="text/css" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tessthornton" />
+    <meta name="twitter:title" content="CSS dot cool" />
+    <meta name="twitter:description" content="Get creative with CSS" />
+    <meta name="twitter:image" content="src/images/twitter-card.jpg" />
+    <meta property="og:url" content="http://css.cool" />
+    <meta property="og:title" content="CSS dot cool" />
+    <meta property="og:description" content="Get creative with CSS" />
+    <meta property="og:image" content="src/images/fb-card.jpg" />
   </head>
   <body>
     <script src="bundle.js"></script>
