use absolute urls for meta images

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="twitter:site" content="@tessthornton" />
     <meta name="twitter:title" content="CSS dot cool" />
     <meta name="twitter:description" content="Get creative with CSS" />
-    <meta name="twitter:image" content="src/images/twitter-card.jpg" />
-    <meta property="og:url" content="http://css.cool" />
+    <meta name="twitter:image" content="https://s3.amazonaws.com/f.cl.ly/items/2g1Y0s3a0Z2J3a002Y2A/twitter-card.jpg" />
+    <meta property="og:url" content="https://s3.amazonaws.com/f.cl.ly/items/172J3V110s1a1s1w0T0e/fb-card.jpg" />
     <meta property="og:title" content="CSS dot cool" />
     <meta property="og:description" content="Get creative with CSS" />
     <meta property="og:image" content="src/images/fb-card.jpg" />
